--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,35 @@
   <title>CV Parser & Shortlister</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="main.js"></script>
+  <style>
+    h4 {
+      color: #343a40;
+    }
+
+    .footer {
+      background: #343a40;
+      color: white;
+      padding: 1rem 0;
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    ul li {
+      margin: 5px 0;
+    }
+    .container {
+      margin-top: 2rem;
+      border: 1px solid #f1f1f1;
+      border-radius: 5px;
+    }
+
+    
+  </style>
 </head>
 
 <body>
@@ -38,9 +63,20 @@
 
 
     <form method=post enctype=multipart/form-data>
-      <h4>Upload Resumes</h4><br>
-      <input type=file name=file multiple>
-      <input type=submit value=Upload>
+      <h4>UPLOAD RESUMES</h4><br>
+      <div class="container">
+        <form>
+          <div class="form-group">
+            <label for="fileUpload" class="form-label font-weight-bold text-primary">
+              <i class="fas fa-upload"></i> Upload Your Files
+            </label>
+            <input type="file" id="fileUpload" name="file" class="form-control-file border rounded p-3 btn btn-primary" multiple>
+          </div>
+          <button type="submit" class="btn btn-primary mb-2"  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: 1rem;">
+            <i class="fas fa-cloud-upload-alt"></i> Upload
+          </button>
+        </form>
+      </div>
     </form>
     <br />
     {%- if files %}
@@ -66,12 +102,12 @@
     </form>
   </div>
 
-  <div class="container">
-    <div class="alert alert-success" role="alert">
-      <p class="alert-heading">Result</p>
-      <a href="{{ url_for('process', filename=" Candidates.csv" )}}">Candidates</a>
-    </div>
+
+
+  <div class="footer">
+    <p>&copy; 2024 CV Parser & Shortlister | Made with <i class="fas fa-heart"></i> by Saksham Agarwal</p>
   </div>
+
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
